feat: update swagger with more examples
